--- a/grc338/restaurantmenucss/index.html
+++ b/grc338/restaurantmenucss/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<html>
       <head>
          <title>Koberl at Blue</title>
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
