--- a/grc338/website-visual-language/contact.html
+++ b/grc338/website-visual-language/contact.html
@@ -47,7 +47,7 @@
         </article>
       </main>
       <footer>
-        <p> © All rights reserved. The Restaurant, 2024. </p>
+        <p> © All rights reserved. Sammy's Slices, 2024. </p>
       </footer>
     </div>
   </body>
