--- a/grc338/website-visual-language/index.html
+++ b/grc338/website-visual-language/index.html
@@ -38,7 +38,7 @@
         <p class="address"> (323) 771-8888 </p>
       </main>
       <footer>
-        <p> © All rights reserved. The Restaurant, 2024. </p>
+        <p> © All rights reserved. Sammy's Slices, 2024. </p>
       </footer>
     </div>
   </body>
