--- a/grc338/website-visual-language/menu.html
+++ b/grc338/website-visual-language/menu.html
@@ -284,7 +284,7 @@
          </main>
          <footer>
             <p>
-               © All rights reserved. The Restaurant, 2024.
+               © All rights reserved. Sammy's Slices, 2024.
             </p>
          </footer>
       </div>
