--- a/grc339/digital-magazine-proposal/index.html
+++ b/grc339/digital-magazine-proposal/index.html
@@ -26,8 +26,10 @@
 			
 			<ul>
 				<li>Organized chaos</li>
-				<li></li>
-				<li>word 3</li> 
+				<li>Retro</li>
+				<li>Modern twist</li> 
+                <li>Collage</li> 
+                <li>Messy geometry</li> 
 			</ul>
             
 			<h3>Visual references</h3>
