--- a/grc339/digital-magazine/index.html
+++ b/grc339/digital-magazine/index.html
@@ -1,150 +1,147 @@
 <!doctype html> 
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/jca1wjc.css">
-    <link rel="stylesheet" href="style.css" />
-    <title>The Peel</title>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-  </head>
-  <body>
-    <div class="home-container">
-      <header>
-        <h1>
-          <a href="index.html">
-            <img src="The Peel Logo.svg" alt=" ">
-          </a>
-          <div></div>
-        </h1>
-        <nav>
-          <ul>
-            <li>
-              <a href="#">About</a>
-            </li>
-            <li>
-              <a href="#">History</a>
-            </li>
-            <li>
-              <a href="#">New Releases</a>
-            </li>
-            <li>
-              <a href="#">Photo Ideas</a>
-            </li>
-            <li>
-              <a href="#">Opinion</a>
-            </li>
-            <li>
-              <a href="#">Subscribe</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <main>
-
-        <!-- Mainstory -->
-        <section class="mainstory">
-          <a href="mainstory.html">
-            <figure>
-              <img src="Starting_Out.webp" alt="Polaroid 636 autofocus model being held, a picture of a Trader Joe's bag full of flowers sticks out from the camera.">
-            </figure>
-            <h2>Starting out with Polaroid</h2>
-            <p>Are you thinking about beginning your journey with instant photography? This is your one-stop shop to learn all about how to begin, what camera models suit you best, where to buy film, and tips for starting out. </p>
-          </a>
-        </section>
-
-        <!-- Secondary -->
-        <section class="secondary">
-          <a href="#">
-            <figure>
-              <img src="Printer_Cameras.webp" alt="Layout of Kodak brand printer cameras, portable Kodak printers, and images from the cameras and printers.">
-            </figure>
-            <h2>Printer cameras v. Instant cameras </h2>
-            <p> Explore the newest technology in instant photography, printer cameras. These new printer cameras use specialized Zink papers or other digital printing processes.</p>
-          </a>
-        </section>
-        <section class="secondary">
-          <a href="#">
-            <figure>
-              <img src="Famous_Polaroids.webp" alt="Four polaroids taken by Andy Warhol. The images are of bananas, John Lennon, Andy Warhol, and Farrah Fawcett">
-            </figure>
-            <h2>Famous Polaroids</h2>
-            <p>Andy Warhol, best known for his screen-printed artwork, also used the Polaroid Big Shot camera to take portraits of celebrities of the time. Many of these pictures were commissioned by the celebrities themselves. </p>
-          </a>
-        </section>
-        <section class="secondary">
-          <a href="#">
-            <figure>
-              <img src="Poses.webp" alt="Picture of a brunette girl holding a polaroid picture of herself holding a polaroid picture of herself and so on.">
-            </figure>
-            <h2>Posing with instant film</h2>
-            <p> Regardless of the format, you deserve to have creative, fun images. Explore these creative photo composition and posing ideas for your next project! </p>
-          </a>
-        </section>
-        <section class="secondary">
-          <a href="#">
-            <figure>
-              <img src="Disassembled_Polaroid_Land.webp" alt="A Polaroid Land camera with the main body removed showing the inside of the camera.">
-            </figure>
-            <h2>How do the Polaroid Land cameras work?</h2>
-            <p> Polaroid Land cameras made instant photography possible with self-developing film that produced images in under a minute. A chemical pack spread developer across the photo as it ejected, revealing the image in real time. Just point, shoot, and wait for the magic to appear.</p>
-          </a>
-        </section>
-        <section class="secondary">
-          <a href="#">
-            <figure>
-              <img src="Scans.webp" alt="Four polaroid picture scans, one of two twenty aged girls, a man and girl on a couch with two dogs, a car, and of a pumpkin carving event." />
-            </figure>
-            <h2>How to scan your exposures</h2>
-            <p> Scanning instant film is the best way to preserve your favorite exposures before they fade. A flatbed scanner captures the image in high detail without damaging the original. It’s a simple step that turns a fragile photo into a lasting digital file. </p>
-          </a>
-        </section>
-      </main>
-      
-      <!-- Tertiary -->
-      <aside>
-        <section class="tertiary">
-          <a href="#">
-            <h2> Choosing a Instant camera </h2>
-            <p> There are many instant camera models to choose from. Make the right decision for you, learn all about the different types of instant cameras from Instax to Lomography.</p>
-          </a>
-        </section>
-        <section class="tertiary">
-          <a href="#">
-            <h2> A guide to film types </h2>
-            <p> Not all instant film is the same. This guide breaks down the differences between Polaroid, Instax, and other formats so you can pick the right one. </p>
-          </a>
-        </section>
-        <section class="tertiary">
-          <a href="#">
-            <h2> Shooting in different weather conditions </h2>
-            <p> Don’t let the forecast stop you. Instant film reacts to temperature—cold slows development, while heat can speed it up or shift colors. Learn how to adjust your shots for rain, sun, or snow. </p>
-          </a>
-        </section>
-        <section class="tertiary">
-          <a href="#">
-            <h2> The chemistry of instant film </h2>
-            <p> There's science behind the magic. Instant film contains layered chemicals that develop the image as they react and spread during ejection. </p>
-          </a>
-        </section>
-        <section class="tertiary">
-          <a href="#">
-            <h2> Instant photography tips </h2>
-            <p> Get better results with a few simple tricks. Learn how lighting, framing, and timing can make your instant photos pop.</p>
-          </a>
-        </section>
-        <section class="tertiary">
-          <a href="#">
-            <h2> Storing your Polaroids </h2>
-            <p> Polaroids don’t last forever — unless you store them right. Keep your prints out of direct light and away from moisture to protect your memories.</p>
-          </a>
-        </section>
-      </aside>
-      <footer>
-        <p> All rights reserved. </p>
-      </footer>
-    </div>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="https://use.typekit.net/jca1wjc.css">
+      <link rel="stylesheet" href="style.css" />
+      <title>The Peel</title>
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <meta http-equiv="Expires" content="0" />
+   </head>
+   <body>
+      <div class="home-container">
+         <header>
+            <h1>
+               <a href="index.html">
+               <img src="The Peel Logo.svg" alt=" ">
+               </a>
+               <div></div>
+            </h1>
+            <nav>
+               <ul>
+                  <li>
+                     <a href="#">About</a>
+                  </li>
+                  <li>
+                     <a href="#">History</a>
+                  </li>
+                  <li>
+                     <a href="#">New Releases</a>
+                  </li>
+                  <li>
+                     <a href="photogallery.html">Photo Gallery</a>
+                  </li>
+                  <li>
+                     <a href="#">Opinion</a>
+                  </li>
+                  <li>
+                     <a href="Newsletter.html">Newsletter</a>
+                  </li>
+               </ul>
+            </nav>
+         </header>
+         <main>
+            <!-- Mainstory -->
+            <section class="mainstory">
+               <a href="mainstory.html">
+                  <figure>
+                     <img src="Starting_Out.webp" alt="Polaroid 636 autofocus model being held, a picture of a Trader Joe's bag full of flowers sticks out from the camera.">
+                  </figure>
+                  <h2>Starting out with Polaroid</h2>
+                  <p>Are you thinking about beginning your journey with instant photography? This is your one-stop shop to learn all about how to begin, what camera models suit you best, where to buy film, and tips for starting out. </p>
+               </a>
+            </section>
+            <!-- Secondary -->
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Printer_Cameras.webp" alt="Layout of Kodak brand printer cameras, portable Kodak printers, and images from the cameras and printers.">
+                  </figure>
+                  <h2>Printer cameras v. Instant cameras </h2>
+                  <p> Explore the newest technology in instant photography, printer cameras. These new printer cameras use specialized Zink papers or other digital printing processes.</p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Famous_Polaroids.webp" alt="Four polaroids taken by Andy Warhol. The images are of bananas, John Lennon, Andy Warhol, and Farrah Fawcett.">
+                  </figure>
+                  <h2>Famous Polaroids</h2>
+                  <p>Andy Warhol, best known for his screen-printed artwork, also used the Polaroid Big Shot camera to take portraits of celebrities of the time. Many of these pictures were commissioned by the celebrities themselves. </p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Poses.webp" alt="Picture of a brunette girl holding a polaroid picture of herself holding a polaroid picture of herself and so on.">
+                  </figure>
+                  <h2>Posing with instant film</h2>
+                  <p> Regardless of the format, you deserve to have creative, fun images. Explore these creative photo composition and posing ideas for your next project! </p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Disassembled_Polaroid_Land.webp" alt="A Polaroid Land camera with the main body removed showing the inside of the camera.">
+                  </figure>
+                  <h2>How do the Polaroid Land cameras work?</h2>
+                  <p> Polaroid Land cameras made instant photography possible with self-developing film that produced images in under a minute. A chemical pack spread developer across the photo as it ejected, revealing the image in real time. Just point, shoot, and wait for the magic to appear.</p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Scans.webp" alt="Four polaroid picture scans, one of two twenty aged girls, a man and girl on a couch with two dogs, a car, and of a pumpkin carving event." />
+                  </figure>
+                  <h2>How to scan your exposures</h2>
+                  <p> Scanning instant film is the best way to preserve your favorite exposures before they fade. A flatbed scanner captures the image in high detail without damaging the original. It’s a simple step that turns a fragile photo into a lasting digital file. </p>
+               </a>
+            </section>
+         </main>
+         <!-- Tertiary -->
+         <aside>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> Choosing a Instant camera </h2>
+                  <p> There are many instant camera models to choose from. Make the right decision for you, learn all about the different types of instant cameras from Instax to Lomography.</p>
+               </a>
+            </section>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> A guide to film types </h2>
+                  <p> Not all instant film is the same. This guide breaks down the differences between Polaroid, Instax, and other formats so you can pick the right one. </p>
+               </a>
+            </section>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> Shooting in different weather conditions </h2>
+                  <p> Don’t let the forecast stop you. Instant film reacts to temperature—cold slows development, while heat can speed it up or shift colors. Learn how to adjust your shots for rain, sun, or snow. </p>
+               </a>
+            </section>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> The chemistry of instant film </h2>
+                  <p> There's science behind the magic. Instant film contains layered chemicals that develop the image as they react and spread during ejection. </p>
+               </a>
+            </section>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> Instant photography tips </h2>
+                  <p> Get better results with a few simple tricks. Learn how lighting, framing, and timing can make your instant photos pop.</p>
+               </a>
+            </section>
+            <section class="tertiary">
+               <a href="#">
+                  <h2> Storing your Polaroids </h2>
+                  <p> Polaroids don’t last forever — unless you store them right. Keep your prints out of direct light and away from moisture to protect your memories.</p>
+               </a>
+            </section>
+         </aside>
+         <footer>
+            <p> All rights reserved. </p>
+         </footer>
+      </div>
+   </body>
 </html>
