--- a/grc339/digital-magazine/mainstory.html
+++ b/grc339/digital-magazine/mainstory.html
@@ -1,91 +1,117 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="https://use.typekit.net/jca1wjc.css">
-    <link rel="stylesheet" href="style.css" />
-    <title>The Peel</title>
-    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
-    <meta http-equiv="Pragma" content="no-cache" />
-    <meta http-equiv="Expires" content="0" />
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <h1><a href="index.html"><img src="The Peel Logo.svg" alt=" " /></a></h1>
-        <nav>
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">History</a></li>
-            <li><a href="#">New Releases</a></li>
-            <li><a href="#">Photo Ideas</a></li>
-            <li><a href="#">Opinion</a></li>
-            <li><a href="#">Subscribe</a></li>
-          </ul>
-        </nav>
-      </header>
-      <article>
-        <figure><img src="Starting_Out.webp" alt="Polaroid 636 autofocus model being held, a picture of a Trader Joe's bag full of flowers sticks out from the camera." />
-          <figcaption> Polaroid 636 autofocus camera model surrounded by picutres taken with it. </figcaption>
-        </figure>
-        <h2> Starting out with Polaroid </h2>
-        <p> Are you thinking about beginning your journey with instant photography? This is your one-stop shop to learn all about how to begin, what camera models suit you best, where to buy film, and tips for starting out. </p>
-        <p> Polaroid photography is a fun and hands-on way to capture moments, with each photo developing right in front of you. This guide will walk you through what kind of camera to start with, how much you can expect to spend on gear and film, where to buy supplies, and simple tips for taking better pictures. </p>
-        <figure><img src="Cameras.webp" alt="Graphic of three types of Polaroid cameras, a Polaroid 600, impulse, and i-type model. " />
-          <figcaption> Graphic of three Polaroid camera model types. Polaroid 600 (left) Impulse (middle) and i-Type (right)</figcaption>
-        </figure>
-        <p> When choosing a camera, beginners should look at Polaroid’s i-Type and 600 series models. The newer i-Type cameras, like the Polaroid Now, are easy to use and cost around $100 to $150. They have built-in rechargeable batteries and features like autofocus and flash. The 600 series cameras are older, but many have been refurbished and are simple to use with their built-in flash and point-and-shoot design. You can often find one online for around $10 to $50 depending on the seller and condition of the camera. </p>
-        <p> Film is where the cost can add up. A pack of Polaroid film contains 8 photos and costs about $18. You can sometimes save by buying in bundles or looking for sales. Both i-Type and 600 film are easy to find online, at stores like Polaroid’s website, Amazon, or camera shops. Note what film your camera supports, i-type cameras support both 600 and i-type film but 600 camera models do not support i-Type film. Store your film in a cool place and let it warm up to room temperature before use, especially if it's been in the fridge.</p>
-        <figure><img src="Film.webp" alt=" Side by side comparison of i-type film and 600 film." />
-          <figcaption> Comparison of Polaroid 600 and i-type film.</figcaption>
-        </figure>
-        <p> Lighting plays a big role in how your photos turn out—instant film works best in bright, natural light. If you’re indoors, using the flash is usually a good idea. Framing can take practice since the viewfinder might not show exactly what the camera captures, especially up close. Some cameras have a simple light or dark setting to help adjust exposure if your photos are coming out too bright or too dark. Every model handles light a bit differently, so don’t be afraid to experiment and learn as you go.</p>
-        <p> Shooting Polaroid is all about the experience. It’s not just about getting a perfect picture—it's about the fun of trying, learning, and watching the image appear in your hand. Mistakes will happen, and that’s okay. That’s part of what makes it so rewarding. </p>
-        <figure><img src="Collection.webp" alt="Photo of a collection of Polaroid images." />
-          <figcaption> Collection of polaroid pictures. </figcaption>
-        </figure>
-      </article>
-      <aside>
-        <section class="secondary"><a href="#">
-          <figure>
-            <img src="Printer_Cameras.webp" alt="Layout of Kodak brand printer cameras, portable Kodak printers, and images from the cameras and printers.">
-          </figure>
-          <h2>Printer cameras v. Instant cameras </h2>
-          <p> Explore the newest technology in instant photography, printer cameras. These new printer cameras use specialized Zink papers or other digital printing processes.</p>
-        </a></section>
-        <section class="secondary"><a href="#">
-          <figure>
-            <img src="Famous_Polaroids.webp" alt="Four polaroids taken by Andy Warhol. The images are of bananas, John Lennon, Andy Warhol, and Farrah Fawcett">
-          </figure>
-          <h2>Famous Polaroids</h2>
-          <p>Andy Warhol, best known for his screen-printed artwork, also used the Polaroid Big Shot camera to take portraits of celebrities of the time. Many of these pictures were commissioned by the celebrities themselves. </p>
-       </a></section>
-        <section class="secondary"><a href="#">
-          <figure>
-            <img src="Poses.webp" alt="Picture of a brunette girl holding a polaroid picture of herself holding a polaroid picture of herself and so on.">
-          </figure>
-          <h2>Posing with instant film</h2>
-          <p> Regardless of the format, you deserve to have creative, fun images. Explore these creative photo composition and posing ideas for your next project! </p>
-       </a></section>
-        <section class="secondary"><a href="#">
-          <figure>
-            <img src="Disassembled_Polaroid_Land.webp" alt="A Polaroid Land camera with the main body removed showing the inside of the camera.">
-          </figure>
-          <h2>How did the Polaroid Land cameras work?</h2>
-          <p> Polaroid Land cameras made instant photography possible with self-developing film that produced images in under a minute. A chemical pack spread developer across the photo as it ejected, revealing the image in real time. Just point, shoot, and wait for the magic to appear.</p>
-       </a></section>
-        <section class="secondary"><a href="#">
-          <figure>
-            <img src="Scans.webp" alt="Four polaroid picture scans, one of two twenty aged girls, a man and girl on a couch with two dogs, a car, and of a pumpkin carving event." />
-          </figure>
-          <h2>How to scan your exposures</h2>
-          <p> Scanning instant film is the best way to preserve your favorite exposures before they fade. A flatbed scanner captures the image in high detail without damaging the original. It’s a simple step that turns a fragile photo into a lasting digital file. </p>
-         </a></section>
-      </aside>
-      <footer>
-        <p> All rights reserved. </p>
-      </footer>
-    </div>
-  </body>
+   <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1" />
+      <link rel="stylesheet" href="https://use.typekit.net/jca1wjc.css">
+      <link rel="stylesheet" href="style.css" />
+      <title>The Peel</title>
+      <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+      <meta http-equiv="Pragma" content="no-cache" />
+      <meta http-equiv="Expires" content="0" />
+   </head>
+   <body>
+      <div class="container">
+         <header>
+            <h1><a href="index.html"><img src="The Peel Logo.svg" alt=" " /></a></h1>
+            <nav>
+               <ul>
+                  <li>
+                     <a href="#">About</a>
+                  </li>
+                  <li>
+                     <a href="#">History</a>
+                  </li>
+                  <li>
+                     <a href="#">New Releases</a>
+                  </li>
+                  <li>
+                     <a href="photogallery.html">Photo Gallery</a>
+                  </li>
+                  <li>
+                     <a href="#">Opinion</a>
+                  </li>
+                  <li>
+                     <a href="Newsletter.html">Newsletter</a>
+                  </li>
+               </ul>
+            </nav>
+         </header>
+         <article>
+            <figure>
+               <img src="Starting_Out.webp" alt="Polaroid 636 autofocus model being held, a picture of a Trader Joe's bag full of flowers sticks out from the camera." />
+               <figcaption> Polaroid 636 autofocus camera model surrounded by picutres taken with it. </figcaption>
+            </figure>
+            <h2> Starting out with Polaroid </h2>
+            <p> Are you thinking about beginning your journey with instant photography? This is your one-stop shop to learn all about how to begin, what camera models suit you best, where to buy film, and tips for starting out. </p>
+            <p> Polaroid photography is a fun and hands-on way to capture moments, with each photo developing right in front of you. This guide will walk you through what kind of camera to start with, how much you can expect to spend on gear and film, where to buy supplies, and simple tips for taking better pictures. </p>
+            <figure>
+               <img src="Cameras.webp" alt="Graphic of three types of Polaroid cameras, a Polaroid 600, impulse, and i-type model. " />
+               <figcaption> Graphic of three Polaroid camera model types. Polaroid 600 (left) Impulse (middle) and i-Type (right)</figcaption>
+            </figure>
+            <p> When choosing a camera, beginners should look at Polaroid’s i-Type and 600 series models. The newer i-Type cameras, like the Polaroid Now, are easy to use and cost around $100 to $150. They have built-in rechargeable batteries and features like autofocus and flash. The 600 series cameras are older, but many have been refurbished and are simple to use with their built-in flash and point-and-shoot design. You can often find one online for around $10 to $50 depending on the seller and condition of the camera. </p>
+            <p> Film is where the cost can add up. A pack of Polaroid film contains 8 photos and costs about $18. You can sometimes save by buying in bundles or looking for sales. Both i-Type and 600 film are easy to find online, at stores like Polaroid’s website, Amazon, or camera shops. Note what film your camera supports, i-type cameras support both 600 and i-type film but 600 camera models do not support i-Type film. Store your film in a cool place and let it warm up to room temperature before use, especially if it's been in the fridge.</p>
+            <figure>
+               <img src="Film.webp" alt=" Side by side comparison of i-type film and 600 film." />
+               <figcaption> Comparison of Polaroid 600 and i-type film.</figcaption>
+            </figure>
+            <p> Lighting plays a big role in how your photos turn out—instant film works best in bright, natural light. If you’re indoors, using the flash is usually a good idea. Framing can take practice since the viewfinder might not show exactly what the camera captures, especially up close. Some cameras have a simple light or dark setting to help adjust exposure if your photos are coming out too bright or too dark. Every model handles light a bit differently, so don’t be afraid to experiment and learn as you go.</p>
+            <p> Shooting Polaroid is all about the experience. It’s not just about getting a perfect picture—it's about the fun of trying, learning, and watching the image appear in your hand. Mistakes will happen, and that’s okay. That’s part of what makes it so rewarding. </p>
+            <figure>
+               <img src="Collection.webp" alt="Photo of a collection of Polaroid images." />
+               <figcaption> Collection of polaroid pictures. </figcaption>
+            </figure>
+         </article>
+         <aside>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Printer_Cameras.webp" alt="Layout of Kodak brand printer cameras, portable Kodak printers, and images from the cameras and printers.">
+                  </figure>
+                  <h2>Printer cameras v. Instant cameras </h2>
+                  <p> Explore the newest technology in instant photography, printer cameras. These new printer cameras use specialized Zink papers or other digital printing processes.</p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Famous_Polaroids.webp" alt="Four polaroids taken by Andy Warhol. The images are of bananas, John Lennon, Andy Warhol, and Farrah Fawcett">
+                  </figure>
+                  <h2>Famous Polaroids</h2>
+                  <p>Andy Warhol, best known for his screen-printed artwork, also used the Polaroid Big Shot camera to take portraits of celebrities of the time. Many of these pictures were commissioned by the celebrities themselves. </p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Poses.webp" alt="Picture of a brunette girl holding a polaroid picture of herself holding a polaroid picture of herself and so on.">
+                  </figure>
+                  <h2>Posing with instant film</h2>
+                  <p> Regardless of the format, you deserve to have creative, fun images. Explore these creative photo composition and posing ideas for your next project! </p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Disassembled_Polaroid_Land.webp" alt="A Polaroid Land camera with the main body removed showing the inside of the camera.">
+                  </figure>
+                  <h2>How did the Polaroid Land cameras work?</h2>
+                  <p> Polaroid Land cameras made instant photography possible with self-developing film that produced images in under a minute. A chemical pack spread developer across the photo as it ejected, revealing the image in real time. Just point, shoot, and wait for the magic to appear.</p>
+               </a>
+            </section>
+            <section class="secondary">
+               <a href="#">
+                  <figure>
+                     <img src="Scans.webp" alt="Four polaroid picture scans, one of two twenty aged girls, a man and girl on a couch with two dogs, a car, and of a pumpkin carving event." />
+                  </figure>
+                  <h2>How to scan your exposures</h2>
+                  <p> Scanning instant film is the best way to preserve your favorite exposures before they fade. A flatbed scanner captures the image in high detail without damaging the original. It’s a simple step that turns a fragile photo into a lasting digital file. </p>
+               </a>
+            </section>
+         </aside>
+         <footer>
+            <p> All rights reserved. </p>
+         </footer>
+      </div>
+   </body>
 </html>
