--- a/grc339/digital-magazine/photogallery.html
+++ b/grc339/digital-magazine/photogallery.html
@@ -38,15 +38,15 @@
             </nav>
          </header>
          <div class="photogallery">
-            <input type="radio" name="item" id="photo1" checked="checked">
-            <input type="radio" name="item" id="photo2">
-            <input type="radio" name="item" id="photo3">
-            <input type="radio" name="item" id="photo4">
-            <input type="radio" name="item" id="photo5">
-            <input type="radio" name="item" id="photo6">
-            <input type="radio" name="item" id="photo7">
-            <input type="radio" name="item" id="photo8">
-            <input type="radio" name="item" id="photo9">
+            <input class="photo" type="radio" name="item" id="photo1" checked="checked">
+            <input class="photo" type="radio" name="item" id="photo2">
+            <input class="photo" type="radio" name="item" id="photo3">
+            <input class="photo" type="radio" name="item" id="photo4">
+            <input class="photo" type="radio" name="item" id="photo5">
+            <input class="photo" type="radio" name="item" id="photo6">
+            <input class="photo" type="radio" name="item" id="photo7">
+            <input class="photo" type="radio" name="item" id="photo8">
+            <input class="photo" type="radio" name="item" id="photo9">
             <h2 class="gallery">Personal Scans</h2>
             <main class="gallery">
                <figure class="gallery">
