--- a/grc322/type-comparison/index.html
+++ b/grc322/type-comparison/index.html
@@ -198,62 +198,62 @@
 			</figure>
 			<figure>
 				<img src="images/Franklin 4.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Album cover for Annie Get Your Gun. The cover features a woman holding a gun to the sky and a red target behind her.">
+				<figcaption>Ethel Merman’s “Annie Get Your Gun” album art was created using Franklin Gothic. This album was a musical and needed a distinct, bold font to stand out to audiences.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Franklin 5.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Poster for Jack Bruce. The poster features a guitar with a face with text saying Jack Bruce Band.">
+				<figcaption>Created by iconic german graphic designer GÜNTHER Kieser, this poster for Jack Bruce used Franklin Gothic for any paragraph text throughout.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Franklin 6.png"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="The back of the Jurassic Park book. The background cover is white with the silhouette of the back of a T-rex skeleton. A quote from Kirkus Reviews is on the back that says A tornato-paced tale... Fast, furious, and suspenseful... A vastly entertaining science thriller... A sure-fire bestseller.">
+				<figcaption>The Jurassic park back cover uses Franklin Gothic as the header text, which boldly stands out for the quote.</figcaption>
 			</figure>
 
             <h3 class="Trade">Trade Gothic</h3> <!-- Older typeface first, please. -->
             <div class="grid">
             <figure>
 				<img src="images/Trade 1.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Darkblue background with an orange lobster with a white wifi symbol as the tail.">
+				<figcaption>This Amtrak advertisement beautifully uses Trade Gothic to add to the simple crayfish illustration with the wifi symbol.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Trade 1.5.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Orange background with palm trees with a woman in the front. She adorns a hat with the wifi symbol as the brim.">
+				<figcaption>Many other wifi posters were made in this series. All feature a wifi symbol in the design. In this poster the symbol is incorporated into the sun hat.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Trade 2.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Design using a word map to make the figure of an arm chair. The text is white over a desaturated brown.">
+				<figcaption>Nurture created ads using Trade Gothic’s bold nature to create a dynamic and unique illustrations of a chair.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Trade 2.5.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Design using a word map to make the figure of a side cabinet.The text is white over a desaturated brown.">
+				<figcaption>This piece used Trade Gothic to make a cabinet out of nothing but text.</figcaption>
 			</figure>
             </div>
 			<figure>
 				<img src="images/Trade 3.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Benzedrine Inhaler design. The design features a young girl, red and white backgrounds and text.">
+				<figcaption>Paul Rand created this iconic Benzedrine Inhaler ad using Trade Gothic as it's primary header and body text.</figcaption>
 			</figure>
 			<figure>
 				<img src="images/Trade 4.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Bob Dylan tour poster. There is a white background with a black and white photo of Bob Dylan in the bottom right corner and text on around the poster.">
+				<figcaption>This Bob Dylan tour poster uses Trade Gothic as it's primary font, creating a well structured header for Bob Dylan himself.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Trade 5.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Dahmer Netlix series poster. There is a photo of the actor Evan Peters as Dahmer in the middle with center aligned text.">
+				<figcaption>The new Dahmer netflix original series had Trade Gothic featured as it's primariy heading and subheading font, using lots of tracking to create a more dynamic look.</figcaption>
 			</figure>
             <figure>
 				<img src="images/Trade 6.jpeg"
-					 alt="Don’t forget your alt attributes.">
-				<figcaption>And don’t forget figcaption either.</figcaption>
+					 alt="Film poster for Frankenstein. The poster has a fleshy texture with sutures running along the skin, along the cut the word Frankenstein is written in red text.">
+				<figcaption>Andy Warhol’s “Frankenstein” has the Trade Gothic text featured as stitching on someone’s cut. Trade Gothic’s simplistic nature makes it legible despite the design.</figcaption>
 			</figure>
     </body>
 </html>
