--- a/grc322/type-comparison/index.html
+++ b/grc322/type-comparison/index.html
@@ -61,7 +61,7 @@
       </figure>
       <figure>
         <img src="images/5 sim.svg" alt="The number 5 ifrom both Trade Gothic and Franklin Gothic side by side for comparison. The counter and left hand corner of the number are highlighted. ">
-        <figcaption>There are slight differences in the counter of the lowercase c and how 'closed in' each c is. However, the height, weight of the letters are similar.</figcaption>
+        <figcaption>There are slight differences in the counter of the five as well as the angle on the top left hand corner. Aside from this the fives share similar line weight.</figcaption>
       </figure>
       <!-- Use as many images as you need. -->
       <h3>Differences</h3>
